# agentic-workflow-lab

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.agents/skills/add-tool-policy/: SKILL.md
.agents/skills/add-validator/: SKILL.md
.agents/skills/create-agent-manifest/: SKILL.md
.claude/agents/: docs-writer.md  planner.md  repo-reviewer.md  security-reviewer.md  validator.md
.cursor/rules/: agentic-architecture.mdc  python-quality.mdc  security.mdc
.github/: copilot-instructions.md
.github/instructions/: docs.instructions.md  python.instructions.md  security.instructions.md  tests.instructions.md
.github/workflows/: ci.yml
agents/manifests/: context-agent.yaml  intake-agent.yaml  planner-agent.yaml  security-agent.yaml  supervisor-agent.yaml  tool-agent.yaml  verifier-agent.yaml
docs/: agents-md.md  architecture.md  claude-subagents.md  codex-skills.md  copilot-instructions.md  mcp.md  roadmap.md  security.md  validation.md
mcp/: README.md  server.py
mcp/tools/: list_agent_manifests.py  read_policy.py  read_project_file.py
policies/: approval-policy.yaml  security-policy.yaml  tool-policy.yaml
schemas/: agent-manifest.schema.json  approval-gate.schema.json  tool-policy.schema.json  validation-result.schema.json
scripts/: _utils.py  check_approval_gates.py  scan_instruction_files.py  validate_agent_manifests.py  validate_agentic_repo.py  validate_tool_policy.py
tests/: test_agent_manifests.py  test_instruction_files.py  test_mcp_path_security.py  test_security_policy.py  test_tool_policy.py  test_validation_scripts.py
(+2 files in other folders)
