[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-workflow-lab"
version = "0.1.0"
description = "Reference repository for AI-coding-agent-ready software projects."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Atakan Emre", email = "satakanemre@gmail.com" }]
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
agentic-lab-validate = "scripts.validate_agentic_repo:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*", "mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
